// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Tables TableBase 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableBordered 1`] = `
<div>
  <table
    class="table table-bordered"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableBorderless 1`] = `
<div>
  <table
    class="table table-borderless"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableBreakpoint 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-sm"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            #
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            1
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            2
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            3
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-md"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            #
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            1
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            2
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            3
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-lg"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            #
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            1
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            2
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            3
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-xl"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            #
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            1
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            2
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            3
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableCaptions 1`] = `
<div>
  <table
    class="table"
  >
    <caption>
      Lista di utenti
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          First
        </th>
        <th
          scope="col"
        >
          Last
        </th>
        <th
          scope="col"
        >
          Handle
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mark
        </td>
        <td>
          Otto
        </td>
        <td>
          @mdo
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Jacob
        </td>
        <td>
          Thornton
        </td>
        <td>
          @fat
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Larry
        </td>
        <td>
          the Bird
        </td>
        <td>
          @twitter
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableCompact 1`] = `
<div>
  <table
    class="table table-sm"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableContextual 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th>
          Class
        </th>
        <th>
          Heading
        </th>
        <th>
          Heading
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-active"
      >
        <th>
          Active
        </th>
        <td>
          Cell
        </td>
        <td>
          Cell
        </td>
      </tr>
      <tr>
        <th>
          Default
        </th>
        <td>
          Cell
        </td>
        <td>
          Cell
        </td>
      </tr>
      <tr
        class="table-primary"
      >
        <th>
          Primary
        </th>
        <td>
          Cell
        </td>
        <td>
          Cell
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <th>
          Secondary
        </th>
        <td>
          Cell
        </td>
        <td>
          Cell
        </td>
      </tr>
      <tr
        class="table-success"
      >
        <th>
          Success
        </th>
        <td>
          Cell
        </td>
        <td>
          Cell
        </td>
      </tr>
      <tr
        class="table-danger"
      >
        <th>
          Danger
        </th>
        <td>
          Cell
        </td>
        <td>
          Cell
        </td>
      </tr>
      <tr
        class="table-warning"
      >
        <th>
          Warning
        </th>
        <td>
          Cell
        </td>
        <td>
          Cell
        </td>
      </tr>
    </tbody>
  </table>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th />
        <th>
          Heading
        </th>
        <th>
          Heading
        </th>
        <th>
          Heading
        </th>
        <th>
          Heading
        </th>
        <th>
          Heading
        </th>
        <th>
          Heading
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Class
        </td>
        <td
          class="table-active"
        >
          Active
        </td>
        <td
          class="table-primary"
        >
          Primary
        </td>
        <td
          class="table-secondary"
        >
          Secondary
        </td>
        <td
          class="table-success"
        >
          Success
        </td>
        <td
          class="table-danger"
        >
          Danger
        </td>
        <td
          class="table-warning"
        >
          Warning
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableDark 1`] = `
<div>
  <table
    class="table table-dark"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableHover 1`] = `
<div>
  <table
    class="table table-hover"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableResponsive 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            #
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
          <th
            scope="col"
          >
            Intestazione
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            1
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            2
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            3
          </th>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
          <td>
            Cella
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableStriped 1`] = `
<div>
  <table
    class="table table-striped"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tables TableThead 1`] = `
<div>
  <table
    class="table"
  >
    <thead
      class="table-dark"
    >
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
  <table
    class="table"
  >
    <thead
      class="table-light"
    >
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Nome
        </th>
        <th
          scope="col"
        >
          Cognome
        </th>
        <th
          scope="col"
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          Mario
        </td>
        <td>
          Verdi
        </td>
        <td>
          mario.verdi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          Francesco
        </td>
        <td>
          Bianchi
        </td>
        <td>
          francesco.bianchi
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          Alessandro
        </td>
        <td>
          Rossi
        </td>
        <td>
          alessandro.rossi
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
